<?xml version="1.0" encoding="utf-8"?>
<!-- 
 Copyright (C) 2010 Florian Sundermann

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
 -->
<resources>
    <!-- English -->
    <string name="app_name">Contact Widget</string>    
    <string name="widget1x2">Contact Widget 1x2</string>
	<string name="widget1x3">Contact Widget 1x3</string>    
	<string name="widget1x4">Contact Widget 1x4</string>
    <string name="widget2x2">Contact Widget 2x2</string>
    <string name="widget2x3">Contact Widget 2x3</string>
    <string name="widget2x4">Contact Widget 2x4</string>
    <string name="widget3x2">Contact Widget 3x2</string>
    <string name="widget3x3">Contact Widget 3x3</string>
    <string name="widget3x4">Contact Widget 3x4</string>
    <string name="widget4x2">Contact Widget 4x2</string>
    <string name="widget4x3">Contact Widget 4x3</string>
    <string name="widget4x4">Contact Widget 4x4</string>
    
    <string name="namekind">Name to display</string>
    <string name="givenname">given name</string>
    <string name="familyname">family name</string>
    <string name="displayname">display name</string>
    <string name="alias">nickname</string>
    
    <string name="loading">Please check your if launcher supports scrolling (ADW Launcher/Launcher Pro) AND if scrolling is enabled.</string>
    <string name="save">Save</string>
    <string name="select_contact_group">Contact group</string>
    <string name="allcontacts">All Contacts *</string>
    <string name="starred">Favorites *</string>
    <string name="displayLabel">Widget label</string>
    <string name="black">Black</string>
    <string name="white">White</string>
    <string name="transparent">Transparent</string>
    <string name="ics_style">Ice Cream Sandwich</string>
    <string name="background">Style</string>
    <string name="showName">Show contact name</string>
    <string name="pref_grp_data">Data</string>
    <string name="pref_grp_layout">Layout</string>
    <string name="pref_grp_general">General</string>
    <string name="help">Help</string>
    <string name="help_summary">Widget does not work?</string>
    <string name="okbtn">Ok</string>
<string name="helptext">If you have any problems with this widget
make sure you have a launcher that supports scrollable widgets
and that you are using the latest update of that launcher!\n\n
Some launchers have options to disable scrollable widgets (make sure scrollable widgets are enabled)\n\n
If there are still problems feel free to contact the developer! (boombuler@googlemail.com)</string>
	<string name="about">About</string>
	<string name="abouttext">I want to thank the following people for their contribution on this project:\n\n
Graphics:\n
* Danny Hensel\n
* Ian Grams\n\n
Translations:\n
* \"EAGINsoftware\"\n\n
Coding:\n
* ChrBas</string>
	<string name="columncount">Columns</string>
	<string name="background_alpha">Background alpha</string>
	<string name="launcher_too_old">Sorry, your launcher is to old, please update it!</string>
	<string name="needs_froyo">This feature is only available on android 2.2 and above</string>
	
	<string name="behavior">Behavior</string>
	
	<string name="quickcontactbar">show QuickContactBar</string>
	<string name="directdial">direct dial</string>
	<string name="showcontact">show contact</string>
	<string name="onclick">Click action</string>
	<string name="sendsms">Send SMS</string>
	
	<string name="textalign">Name position</string>
	<string name="align_center">Center (below the picture)</string>
	<string name="align_left">Left of the picture</string>
	<string name="align_right">Right of the picture</string>
</resources>
